# Prism

./: .gitignore  README.md  pyproject.toml
benchmarks/: layer_bench.py  recall.py  tasks.py
examples/: ollama_agent.py  reference_agent.py
examples/demo_repo/: api.py  auth.py  limits.py
examples/demo_repo/tests/: test_api.py
src/prism/: __init__.py  agent.py  attention.py  checkers.py  cli.py  context.py  domains.py  execution.py  explorer.py  graph.py  indexer.py  llm.py  lsp.py  memory.py  packer.py  pathsafe.py  planner.py  render.py  semantic.py  server.py  tokens.py  tools.py  trace.py  ttc.py  universal.py  verifier.py  verify.py
tests/: test_checkers.py  test_domains.py  test_memory.py  test_pivot.py  test_planner.py  test_smoke.py  test_tools.py  test_trace.py  test_verifier.py
