[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-context"
version = "0.1.0"
description = "Token-budget-aware codebase context server for small models and agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []  # core is stdlib-only, on purpose
keywords = ["ai-agents", "code-search", "context-engineering", "mcp", "rag"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
tokens = ["tiktoken>=0.5"]
dev = ["pytest>=7"]

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
